--- a/web/index.html
+++ b/web/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TuneTrix</title>
-    <link rel="icon" type="image/svg+xml" href="/icons/app-icon.svg" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/TuneTrixIcon-32.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="/assets/TuneTrixIcon-192.png" />
+    <link rel="apple-touch-icon" href="/assets/TuneTrixIcon.png" />
   </head>
   <body>
     <div id="root"></div>
